# mosaic-gpt

./: .gitignore  README.md  pyproject.toml
.claude/agents/: train-conductor.md  train-healer.md  train-ops.md
configs/: gpt2_reference.yaml  mosaic_dense.yaml  mosaic_dense_3090.yaml  mosaic_small.yaml  mosaic_small_3090.yaml  mosaic_small_resume.yaml
eval/: benchmarks.py
experiments/: eval.py  run_benchmarks.py  train.py  upload_to_hf.py
mosaic/: __init__.py  config.py  model.py
mosaic/attention/: __init__.py  gqa.py  mha.py  mla.py
mosaic/ffn/: __init__.py  gelu.py  moe.py  swiglu.py
mosaic/norm/: __init__.py  layernorm.py  rmsnorm.py
mosaic/output/: __init__.py
mosaic/position/: __init__.py  alibi.py  rope.py
paper/: outline.md
scripts/: dashboard.py  instance_profiles.yaml  run_monitor.py  train_manager.py  train_megatron.sh
training/: data.py  trainer.py
